Add minimal working example of "all-or-nothing" access with IIIF Auth
This demonstrates a bug in Cantaloupe that doesn't allow the delegate
system to produce HTTP 401 responses with JSON-LD content, which is
required in cases such as "all-or-nothing" access.

From https://iiif.io/api/auth/1.0/#all-or-nothing-access:

  If the server does not support multiple tiers of access to a Content
  Resource, and the user is not authorized to access it, then the server
  must return a response with a 401 (Unauthorized) HTTP status code for
  the corresponding Description Resource.

https://iiif.io/api/auth/1.0/#workflow-from-the-browser-client-perspective
further explains:

  * if the response [to a description resource request] is a 401,
    * The client does not have access to the Content Resource, and thus
      the client checks for authentication services in the JSON received.